# Logicraft_2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CSharpUtils.cmake  PrototypeUtils.cmake  Utils.cmake
prototype/: CMakeLists.txt
prototype/csharp_interop_prototype/: CMakeLists.txt
prototype/csharp_interop_prototype/cpp_files/: CMakeLists.txt
prototype/csharp_interop_prototype/csharp_files/: Component.cs  Directory.Build.props  External.cs  GameObject.cs  InteropTesting.csproj  LogComponent.cs  Main.cs  Quaternion.cs  Vector.cs
prototype/engine_prototype/: CMakeLists.txt
prototype/engine_prototype/Editor_Build/Assets/Scripts/: LogComponent.cs
prototype/engine_prototype/editor/: Application.cs  AssetsFileWatcher.cs  Directory.Build.props  DynamicAssemblyLoadContext.cs  Editor.csproj  Main.cs  ScriptReloader.cs
prototype/engine_prototype/engine_core/: CMakeLists.txt
prototype/engine_prototype/engine_core/include/: component.h  engine.h  game_object.h  game_object_holder.h
prototype/engine_prototype/engine_core/src/: component.cpp  game_object.cpp  game_object_holder.cpp
prototype/engine_prototype/engine_runtime/: Component.cs  EngineRuntime.csproj  GameObject.cs  GeneralCall.cs  InternalComponent.cs  InternalGameObject.cs  InternalGeneralCall.cs
prototype/engine_prototype/game_script/: Directory.Build.props  GameScript.csproj
prototype/foo_prototype/: CMakeLists.txt
prototype/foo_prototype/include/: foo.h
prototype/foo_prototype/src/: foo.cpp
prototype/unit_tests/: CMakeLists.txt  unit_tests.cpp
(+10 files in other folders)
